# FaceScraper

./: README.md  pyproject.toml
src/face_scraper/: __init__.py  download.py  face_detection.py  main.py  quality.py  recognition.py  search.py
